--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Aaron M. Trovillion",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^5.1.0"
+    "inquirer": "^5.1.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^6.0.0",
+    "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
     "jasmine": "^3.4.0"
