--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Aaron M. Trovillion",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^5.1.0"
+    "inquirer": "^5.1.0",
+    "pg": "^7.12.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.10.3"
   },
   "devDependencies": {
     "jasmine": "^3.4.0"
